switched to font-awesome, and include it per default

--- a/templates/calista-page.html.twig
+++ b/templates/calista-page.html.twig
@@ -10,7 +10,7 @@
             {% if portlet.route %}
               <a class="pull-right" href="{{ url(portlet.route) }}">
                 {{ "see all"|t }}
-                <span aria-hidden="true" class="glyphicon glyphicon-share-alt"></span>
+                <span aria-hidden="true" class="fa fa-share-alt"></span>
               </a>
             {% endif %}
           </h3>
