--- a/js/calista.css
+++ b/js/calista.css
@@ -1,1 +1,294 @@
-#toolbar{z-index:110}#contextual-pane{position:fixed;z-index:105}#contextual-pane .tabs a{background:0 0}#contextual-pane .tabs a.active{color:#fff}#contextual-pane .tabs a.disabled,#contextual-pane .tabs a[disabled=disabled]{color:#444}#contextual-pane .tabs a:focus,#contextual-pane .tabs a:hover{color:#fff;text-decoration:none}#contextual-pane .inner{position:absolute;top:0;right:0;bottom:0;left:0;background:#222;z-index:2;width:100%;padding:12px}#contextual-pane.pane-right{top:0;right:0;width:330px;height:100%}#contextual-pane.pane-right .inner{padding-top:calc(62px)}#contextual-pane .tabs{position:relative;color:#9d9d9d}#contextual-pane .tabs>div{position:absolute;width:100%;height:100%;display:none}#contextual-pane .tabs>div.active{display:block}#contextual-pane-toggle{position:absolute;display:inline-block;background:#222;font-size:14px}#contextual-pane-toggle a{display:inline-block;padding:12px;color:#9d9d9d}#contextual-pane-toggle a.active{background-color:#337ab7;color:#fff}#contextual-pane-toggle a:focus,#contextual-pane-toggle a:hover{background-color:#286090;color:#fff;text-decoration:none}#contextual-pane.pane-right #contextual-pane-toggle{top:50%;right:100%;border-radius:0}#contextual-pane.pane-right #contextual-pane-toggle a:first-child{border-top:none;border-radius:0}#contextual-pane.pane-right #contextual-pane-toggle a:last-child{border-radius:0}#contextual-pane.pane-right #contextual-pane-toggle a:only-child{border-radius:0}#contextual-pane #contextual-pane-toggle a.active{color:#fff}#contextual-pane>.inner>.actions{padding:0 5px}#contextual-pane>.inner>.actions>input{margin-right:5px}#contextual-pane>.inner>.actions .btn{margin-top:5px}#tab-notification{overflow-y:auto}.calista-page [data-page-block=display_mode]{margin-bottom:10px}.calista-page [data-page-block=search_form]{margin-bottom:10px}.page-modal{display:none;background:#fff;opacity:.4;position:absolute;top:0;left:0;bottom:0;right:0;z-index:1000}#contextual-pane .inner h2,#contextual-pane .inner h3,#contextual-pane .inner h4{margin:calc(12px) 0;border-bottom:1px solid #2d2d2d;padding-bottom:6px}#contextual-pane .inner h2:first-child,#contextual-pane .inner h3:first-child,#contextual-pane .inner h4:first-child{margin-top:0}#contextual-pane .inner h2{padding-bottom:calc(12px);font-size:150%}#contextual-pane .inner h3{font-size:130%}#contextual-pane .inner h4{font-size:120%}#contextual-pane .inner hr{border-color:#4d4d4d}#contextual-pane .inner button,#contextual-pane .inner input{background:#2d2d2d;border-color:#4d4d4d;color:#9d9d9d}#contextual-pane .dropdown-menu input{background:#fff;color:#222}.calista-actions>.btn,.calista-actions>.btn-group>button,.calista-actions>a.btn{font-size:.8em}.calista-actions>*>*{font-size:inherit}#dashboard .portlet{min-width:415px}#dashboard .panel-body{min-height:280px}#dashboard .with-actions .panel-body{min-height:225px}#dashboard .with-actions .scrolling{max-height:195px;overflow:scroll}#dashboard #porlet-ucms_site_sites_portlet table td:nth-of-type(2){white-space:nowrap}.dropdown-menu>button,.dropdown-menu>input{display:block;padding:0 20px;line-height:1.42857143;white-space:nowrap;clear:both;font-weight:400;color:#222;background:0 0;border:none;width:100%;text-align:left}.dropdown-menu>button:focus,.dropdown-menu>button:hover,.dropdown-menu>input:focus,.dropdown-menu>input:hover{text-decoration:none;color:#262626;background-color:#f5f5f5;border:none}
+/*****************************************************************************
+ *
+ * VARIABLES
+ *
+ *****************************************************************************/
+/*****************************************************************************
+ *
+ * TOOLBAR
+ *
+ *****************************************************************************/
+#toolbar {
+  z-index: 1103;
+}
+/*****************************************************************************
+ *
+ * CONTEXTUAL PANE
+ *
+ *****************************************************************************/
+#contextual-pane {
+  position: fixed;
+  z-index: 1102;
+  top: 0;
+  right: 0;
+  width: 330px;
+  height: 100%;
+}
+#contextual-pane .tabs a {
+  background: transparent;
+}
+#contextual-pane .tabs a.active {
+  color: #fff;
+}
+#contextual-pane .tabs a.disabled,
+#contextual-pane .tabs a[disabled=disabled] {
+  color: #444;
+}
+#contextual-pane .tabs a:focus,
+#contextual-pane .tabs a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+#contextual-pane .inner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #222;
+  z-index: 2;
+  width: 100%;
+  padding: 12px;
+  padding-top: calc(62px);
+}
+#contextual-pane.contextual-collapsed {
+  transform: translateX(100%);
+  transition: all 0.4s ease-out;
+}
+#contextual-pane:not(.contextual-collapsed) {
+  transition: all 0.4s ease-out;
+}
+#contextual-pane.initial-collapse {
+  transition: none !important;
+}
+#contextual-pane [data-tab] {
+  display: none;
+  position: absolute;
+  top: 100px;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  padding: 6px 12px;
+}
+#contextual-pane [data-tab].active {
+  display: block;
+}
+#contextual-pane > .inner > .actions {
+  padding: 0 5px;
+}
+#contextual-pane > .inner > .actions > input {
+  margin-right: 5px;
+}
+#contextual-pane > .inner > .actions .btn {
+  margin-top: 5px;
+}
+#tab-notification {
+  overflow-y: auto;
+}
+/*****************************************************************************
+ *
+ * TABS BUTTONS AND TOGGLE
+ *
+ *****************************************************************************/
+#contextual-pane-tabs .tab-button {
+  width: 40px;
+  height: 40px;
+  background: #222;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+}
+#contextual-pane-tabs .tab-button a {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  font-size: 14px;
+  display: inline-block;
+  color: #9d9d9d;
+}
+#contextual-pane-tabs .tab-button a.active,
+#contextual-pane-tabs .tab-button a:focus,
+#contextual-pane-tabs .tab-button a:hover {
+  background-color: #286090;
+  color: #fff;
+  text-decoration: none;
+}
+#contextual-pane-toggle {
+  width: 40px;
+  height: 40px;
+  background: #222;
+  overflow: hidden;
+  position: relative;
+  position: absolute;
+  top: 50%;
+  left: -40px;
+  transform: translateY(-50%);
+}
+#contextual-pane-toggle a {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  font-size: 14px;
+  display: inline-block;
+  color: #9d9d9d;
+}
+#contextual-pane-toggle a.active,
+#contextual-pane-toggle a:focus,
+#contextual-pane-toggle a:hover {
+  background-color: #286090;
+  color: #fff;
+  text-decoration: none;
+}
+/*****************************************************************************
+ *
+ * PAGE
+ *
+ *****************************************************************************/
+[data-page] [data-page-block=display_mode] {
+  margin-bottom: 10px;
+}
+[data-page] [data-page-block=search_form] {
+  margin-bottom: 10px;
+}
+/*****************************************************************************
+ *
+ * LOADER
+ *
+ *****************************************************************************/
+.page-modal {
+  display: none;
+  background: white;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1000;
+  transition: opacity 0.2s ease-out;
+}
+.page-modal.loading {
+  display: block;
+  opacity: 0.4;
+  transition: opacity 1s ease-in;
+}
+.inverse .page-modal {
+  background: black;
+}
+/*****************************************************************************
+ *
+ * TYPO AND STYLING WITHIN PANE
+ *
+ *****************************************************************************/
+#contextual-pane [data-tab] * {
+  color: #fff;
+}
+#contextual-pane [data-tab] h2,
+#contextual-pane [data-tab] h3,
+#contextual-pane [data-tab] h4,
+#contextual-pane [data-tab] h5,
+#contextual-pane [data-tab] h6 {
+  margin: 6px 0;
+  border-bottom: 1px solid #2d2d2d;
+  padding-bottom: 6px;
+}
+#contextual-pane [data-tab] h2:first-child,
+#contextual-pane [data-tab] h3:first-child,
+#contextual-pane [data-tab] h4:first-child,
+#contextual-pane [data-tab] h5:first-child,
+#contextual-pane [data-tab] h6:first-child {
+  margin-top: 0px;
+}
+#contextual-pane [data-tab] h2 {
+  padding-bottom: 6px;
+  font-size: 150%;
+}
+#contextual-pane [data-tab] h3 {
+  font-size: 130%;
+}
+#contextual-pane [data-tab] h4 {
+  font-size: 120%;
+}
+#contextual-pane [data-tab] hr {
+  border-color: #4d4d4d;
+}
+/*****************************************************************************
+ *
+ * FORMS IN CONTEXT PANE
+ *
+ *****************************************************************************/
+#contextual-pane .inner input,
+#contextual-pane .inner button {
+  background: #2d2d2d;
+  border-color: #4d4d4d;
+  color: #9d9d9d;
+}
+/* Minor fix for inputs in dropdowns */
+#contextual-pane .dropdown-menu input {
+  background: #fff;
+  color: #222;
+}
+/*****************************************************************************
+ *
+ * ACTIONS
+ *
+ *****************************************************************************/
+/* In most projects, buttons are too big */
+.calista-actions > .btn,
+.calista-actions > a.btn,
+.calista-actions > .btn-group > button {
+  font-size: 0.8em;
+}
+.calista-actions > * > * {
+  font-size: inherit;
+}
+/*****************************************************************************
+ *
+ * DASHBOARD
+ *
+ *****************************************************************************/
+#dashboard .portlet {
+  min-width: 415px;
+}
+#dashboard .panel-body {
+  min-height: 280px;
+}
+#dashboard .with-actions .panel-body {
+  min-height: 225px;
+}
+#dashboard .with-actions .scrolling {
+  max-height: 195px;
+  overflow: scroll;
+}
+#dashboard #porlet-ucms_site_sites_portlet table td:nth-of-type(2) {
+  white-space: nowrap;
+}
+.dropdown-menu > input,
+.dropdown-menu > button {
+  display: block;
+  padding: 0 20px;
+  line-height: 1.42857143;
+  white-space: nowrap;
+  clear: both;
+  font-weight: 400;
+  color: #222;
+  background: none;
+  border: none;
+  width: 100%;
+  text-align: left;
+}
+.dropdown-menu > button:focus,
+.dropdown-menu > button:hover,
+.dropdown-menu > input:focus,
+.dropdown-menu > input:hover {
+  text-decoration: none;
+  color: #262626;
+  background-color: #f5f5f5;
+  border: none;
+}
+
+/*# sourceMappingURL=calista.css.map*/
